# The-Shill-Game

./: .gitignore  README.md  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/scripts/: lint_check.sh  run.sh
backend/src/the_shill_game/: __init__.py  main.py
backend/src/the_shill_game/agent/: character.py  memecoin.py  memecoin_agent.py  traits.py
backend/src/the_shill_game/game/: host.py  setup.py  state.py  utils.py  websocket.py
backend/src/the_shill_game/static/: index.html
backend/src/the_shill_game/utils/: dummy.py  id_generator.py  model.py  time.py
backend/web/: index.html
contract/: .gitignore  README.md  foundry.toml
contract/script/: Character.s.sol  Deploy.s.sol
contract/src/: Character.sol  Traits.sol
contract/test/: Character.t.sol
frentend/: bun.lockb  package.json
frentend/src/app/: layout.tsx  page.tsx  provider.tsx
frentend/src/app/_component/: header.tsx
frentend/src/lib/: shortAccount.ts
frontend/: bun.lockb  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  provider.tsx
frontend/src/app/_component/: Character.tsx  GameStage.tsx  MessageBoard.tsx  header.tsx  stage.tsx
frontend/src/config/abi/: NFT.ts
frontend/src/context/: CharacterContext.tsx  WebSocketContext.tsx
frontend/src/lib/: wagmi.ts
frontend/src/types/: global.d.ts  react-sprite-animator.d.ts
