[project]
name = "the-shill-game"
version = "0.1.0"
description = ""
authors = [{name = "clement.l",email = "maple3312936@outlook.com"}]
requires-python = ">=3.12"
dependencies = [
    "openai-agents (>=0.0.8,<0.0.9)",
    "ruff (>=0.11.3,<0.12.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
]

[tool.poetry]
packages = [{include = "the_shill_game", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
